<resources>
    <string name="app_name">GPS Sport Map</string>

    <string name="title_welcome">Welcome</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_add_checkpoint">Add checkpoint</string>
    <string name="title_add_waypoint">Add waypoint</string>
    <string name="title_stop_session">Stop session</string>
    <string name="title_no_sessions">No sessions to view</string>
    <string name="title_remove_session">Remove session</string>
    <string name="title_settings">Settings</string>

    <string name="subtitle_new_session">New Session</string>
    <string name="subtitle_sessions">Sessions</string>

    <string name="text_create_account">Don\'t have an account?</string>
    <string name="text_login_instead">Already a member?</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_new_session">Start a new training session</string>
    <string name="text_sessions">See and edit your previous sessions</string>
    <string name="text_location_permission_rationale">This application requires location access</string>
    <string name="text_storage_write_permission_rationale">This application requires storage write access</string>
    <string name="text_distance">Distance</string>
    <string name="text_duration">Duration</string>
    <string name="text_pace">Pace</string>
    <string name="text_total_statistics">Total statistics</string>
    <string name="text_stopping_confirmation">Are you sure you want to stop the session? You will not be able to start it again.</string>
    <string name="text_session_ended">Session has been ended. You can now view it in the history.</string>
    <string name="text_session_removal_confirmation">Are you sure you want to remove this session? This action is irreversible.</string>
    <string name="text_track_color">Track segment colors</string>
    <string name="text_track_color_slow">&lt;= 1.3 m/s</string>
    <string name="text_track_color_normal">&lt;= 2.7 m/s</string>
    <string name="text_track_color_fast">&gt; 2.7 m/s</string>
    <string name="text_track_width">Track width</string>
    <string name="text_map_style">Map style</string>
    <string name="text_map_style_normal">Normal</string>
    <string name="text_map_style_satellite">Satellite</string>
    <string name="text_logout">Logout</string>
    <string name="text_delete_account">Delete account</string>

    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Password confirmation</string>

    <string name="error_invalid_email">Invalid email</string>
    <string name="error_empty_password">Password must not be empty nor contain whitespaces</string>
    <string name="error_login_failed">Could not log you in</string>
    <string name="error_empty_required_field">This field is required</string>
    <string name="error_incorrect_password">"Password does not match the criteria:\n    * First letter must be uppercase\n    * Must only contain characters A-Z, a-z, 0-9 and _\n    * Length must be at least 6 characters\n    "</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="error_registration_failed">Could not register a new account</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_track_width">Width must be a float</string>

    <string name="distance_meters">%d m</string>
    <string name="distance_kilometers">%.2f km</string>
    <string name="duration_millis">%1$02d:%2$02d:%3$02d.%4$02d</string>
    <string name="duration">%1$02d:%2$02d:%3$02d</string>
    <string name="pace">%.2f min/km</string>

    <string-array name="track_color_choice">
        <item>Light blue</item>
        <item>Blue</item>
        <item>Dark blue</item>
        <item>Light grey</item>
        <item>Grey</item>
        <item>Dark grey</item>
        <item>Red</item>
    </string-array>
</resources>
