<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/standard_padding"
    tools:context=".ui.fragments.RegistrationFragment">

    <TextView
        android:id="@+id/text_view_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/title_register"
        android:textColor="@color/primary"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/input_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_field"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/prompt_first_name"
        android:inputType="textPersonName"
        android:paddingVertical="16dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/input_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_field"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/prompt_last_name"
        android:inputType="textPersonName"
        android:paddingVertical="16dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_first_name" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_field"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingVertical="16dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_last_name" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_field"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingVertical="16dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_password_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <EditText
        android:id="@+id/input_password_confirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_field"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/prompt_password_confirmation"
        android:imeActionLabel="@string/text_register"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingVertical="16dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        tools:selectAllOnFocus="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="200dp"
        android:background="@drawable/button_primary"
        android:enabled="false"
        android:fontFamily="@font/roboto"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/text_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password_confirmation" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_password_confirmation"
        app:layout_constraintStart_toStartOf="@+id/input_password_confirmation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/text_view_login_suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/text_login_instead"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_login"
        android:textColor="@color/secondary_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_login_suggestion"
        app:layout_constraintStart_toEndOf="@+id/text_view_login_suggestion" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>