<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_padding"
    tools:context=".ui.fragments.SettingsDialogFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/title_settings"
        android:textColor="@color/primary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/text_track_color"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <RadioGroup
        android:id="@+id/rbg_track_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView">

        <RadioButton
            android:id="@+id/rb_color_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary" />

        <RadioButton
            android:id="@+id/rb_color_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/secondary" />

        <RadioButton
            android:id="@+id/rb_color_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/grey" />

        <RadioButton
            android:id="@+id/rb_color_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/text_track_width"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_track_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_field"
        android:ems="3"
        android:fontFamily="@font/roboto_light"
        android:inputType="number|numberDecimal"
        android:padding="5dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColorHint="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_primary"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/text_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete_account"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        android:backgroundTint="@color/red"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/text_delete_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_logout"
        app:layout_constraintTop_toTopOf="@+id/btn_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>